@@ -1,0 +1,2 @@
+(defbuiltin getenv (name)
+  (sb-ext:posix-getenv name))
