@@ -1,4 +1,7 @@
 Changes relative to tre-0.20:
+  * New GETENV reads environment variables.
+  * File .tre in path working directory is read to update environment
+    variables.
   * JS class methods may be declared static.
   * PHP class members and methods may be declared static,
     protected or private.
